--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,17 @@
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
 <p><em>A responsive grid system that perfectly fits to the window size in both width and height if needed and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</em></p>
+<p><a href="https://travis-ci.org/avine/bem-flex-grid"><img src="https://travis-ci.org/avine/bem-flex-grid.svg?branch=master" alt="Build Status"></a></p>
 <h2>Quick start</h2>
+<p>Get instant access to the package by inserting the link tag from <code>https://unpkg.com</code> into your web pages.</p>
 <h3>Link tag</h3>
-<p><em>Evergreen browser:</em></p>
+<p><em>For Evergreen browser:</em></p>
 <pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid.css&quot;&gt;
 </code></pre>
-<p><em>IE11 compatibility:</em></p>
+<p><em>For IE11 compatibility:</em></p>
 <pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid.ie11.css&quot;&gt;
 </code></pre>
-<p><em>HTML starter markup:</em></p>
+<h3>HTML starter markup</h3>
 <pre><code class="language-html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
@@ -79,17 +81,20 @@
   &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt;
   &lt;title&gt;Bem Flex Grid&lt;/title&gt;
   &lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid.css&quot;&gt;
-  &lt;style&gt;html, body { height: 100%; margin: 0; }&lt;/style&gt;
+  &lt;style&gt;
+    html, body { height:100%; }
+    body { padding:1rem; box-sizing:border-box; }
+  &lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
   &lt;div class=&quot;bfg bfg--row&quot;&gt;
-    &lt;div class=&quot;bfg__box&quot;&gt;Hello&lt;/div&gt;
-    &lt;div class=&quot;bfg__box&quot;&gt;World!&lt;/div&gt;
+    &lt;div class=&quot;bfg__box bfg__box--12&quot;&gt;Hello bfg!&lt;/div&gt;
   &lt;/div&gt;
 &lt;/body&gt;
 &lt;/html&gt;
 </code></pre>
 <h2>Installation</h2>
+<p>Install the package from NPM (or Yarn) and insert the link tag into your web pages or import the package into your Sass files.</p>
 <h3>NPM</h3>
 <p><em>Install from NPM:</em></p>
 <pre><code class="language-bash">npm i bem-flex-grid
