--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
 
   <link rel="stylesheet" href="styles/demo.scss">
-  <link rel="stylesheet" href="styles/www.scss">
+  <link rel="stylesheet" href="styles/docs.scss">
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
   <style>
@@ -27,38 +27,38 @@
   </style>
 </head>
 <body>
-  <div class="www-navbar www-navbar--back">
-    <div class="www-container">
-      <a href="./" class="www-navbar__link">Bem Flex Grid</a>
+  <div class="docs-navbar docs-navbar--back">
+    <div class="docs-container">
+      <a href="./" class="docs-navbar__link">Bem Flex Grid</a>
     </div>
   </div>
-  <header class="www-navbar www-navbar--front">
-    <div class="www-container">
-      <a href="./" class="www-navbar__link">doc</a>
-      <a href="demo.html" class="www-navbar__link">demo</a>
-      <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">github</a>
+  <header class="docs-navbar docs-navbar--front">
+    <div class="docs-container">
+      <a href="./" class="docs-navbar__link">doc</a>
+      <a href="demo.html" class="docs-navbar__link">demo</a>
+      <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
   </header>
 
-  <header class="www-header">
+  <header class="docs-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow-visible bfg--sm-disabled">
       <div class="bfg__box bfg__box--fit bfg__box--last">
-        <div class="www-logo">
-          <div class="www-logo__square www-logo__square--1"></div>
-          <div class="www-logo__square www-logo__square--2"></div>
-          <div class="www-logo__square www-logo__square--3"></div>
-          <div class="www-logo__square www-logo__square--4"></div>
+        <div class="docs-logo">
+          <div class="docs-logo__square docs-logo__square--1"></div>
+          <div class="docs-logo__square docs-logo__square--2"></div>
+          <div class="docs-logo__square docs-logo__square--3"></div>
+          <div class="docs-logo__square docs-logo__square--4"></div>
         </div>
       </div>
 
-      <div class="bfg__box bfg__box--fit www-header__title"><!-- note: "h1" replaced by "div" -->
+      <div class="bfg__box bfg__box--fit docs-header__title"><!-- note: "h1" replaced by "div" -->
         <a href="./">Bem Flex Grid</a>
       </div>
     </div>
-    <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
+    <h2 class="docs-header__subtitle">CSS flex grid, BEM compliant.</h2>
   </header>
 
-  <main class="www-container">
+  <main class="docs-container">
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
@@ -741,7 +741,7 @@ npm run doc
 
   </main>
 
-  <footer class="www-footer">
+  <footer class="docs-footer">
     Made with <b>&hearts;</b> by Avine.
   </footer>
 </body>
