--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,9 @@
 &lt;/body&gt;
 &lt;/html&gt;
 </code></pre>
+<blockquote>
+<p>To learn more about the features, check out the <a href="https://avine.github.io/bem-flex-grid/demo.html">demos</a>.</p>
+</blockquote>
 <h2>Installation and usage</h2>
 <p>Install the package from NPM (or Yarn) and insert the link tag into your web pages or use Sass import.</p>
 <p><em>NPM:</em></p>
