Add a new block: `.bfg-card`!

--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -21,7 +21,7 @@
       <h1>Mixing chained and nested grids</h1>
       <p>Works too!</p>
       <p>Notice that if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
-      <p>In this demo we also add <code>.bfg__content--nopad</code> modifier to remove the padding of the <code>.bfg__content</code> element.</p>
+      <p>In this demo we also add <code>.bfg-card__content--nopad</code> modifier to remove the padding of the <code>.bfg-card__content</code> element.</p>
 
     </div>
   </div>
@@ -34,18 +34,18 @@
           <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
 
             <div class="bfg__box bfg__box--6">
-              <div class="bfg__content bfg__content--nopad"></div>
+              <div class="bfg-card__content bfg-card__content--nopad"></div>
             </div>
             <div class="bfg__box bfg__box--6">
-              <div class="bfg__content bfg__content--nopad"></div>
+              <div class="bfg-card__content bfg-card__content--nopad"></div>
             </div>
 
           </div>
           <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
             <div class="bfg bfg--col"><!-- nested -->
 
-              <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--nopad"></div></div>
-              <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--nopad"></div></div>
+              <div class="bfg__box bfg__box--6"><div class="bfg-card__content bfg-card__content--nopad"></div></div>
+              <div class="bfg__box bfg__box--6"><div class="bfg-card__content bfg-card__content--nopad"></div></div>
 
             </div>
           </div>
@@ -57,10 +57,10 @@
             <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
 
               <div class="bfg__box bfg__box--6">
-                <div class="bfg__content bfg__content--nopad"></div>
+                <div class="bfg-card__content bfg-card__content--nopad"></div>
             </div>
               <div class="bfg__box bfg__box--6">
-                <div class="bfg__content bfg__content--nopad"></div>
+                <div class="bfg-card__content bfg-card__content--nopad"></div>
             </div>
 
             </div>
@@ -68,10 +68,10 @@
               <div class="bfg bfg--col"><!-- nested -->
 
                 <div class="bfg__box bfg__box--6">
-                  <div class="bfg__content bfg__content--nopad"></div>
+                  <div class="bfg-card__content bfg-card__content--nopad"></div>
                 </div>
                 <div class="bfg__box bfg__box--6">
-                  <div class="bfg__content bfg__content--nopad"></div>
+                  <div class="bfg-card__content bfg-card__content--nopad"></div>
                 </div>
 
               </div>
