--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -19,44 +19,44 @@
     <div class="demo-layout__readme">
 
       <h1>Content, header and actions</h1>
-      <p>Add an header using <code>.bfg__header</code> element along with <code>.bfg__content</code> element.</p>
-      <p>Add one or more actions using <code>.bfg__action</code> element along with <code>.bfg__header</code> element.</p>
+      <p>Add an header using <code>.bfg-card__header</code> element along with <code>.bfg-card__content</code> element.</p>
+      <p>Add one or more actions using <code>.bfg-card__action</code> element along with <code>.bfg-card__header</code> element.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--3 bfg__box--error">
+      <div class="bfg bfg--col bfg--gap bfg-card--primary">
+        <div class="bfg__box bfg__box--3 bfg-card--error">
           <!-- content with header -->
-          <header class="bfg__header">Header</header>
-          <div class="bfg__content"></div>
+          <header class="bfg-card__header">Header</header>
+          <div class="bfg-card__content"></div>
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg__box--primary">
+          <div class="bfg__box bfg__box--3">
             <!-- content with header and actions -->
-            <div class="bfg__action"><a href="#action-2">Action 2</a></div>
-            <div class="bfg__action"><a href="#action-1">Action 1</a></div>
-            <header class="bfg__header">Very very very long Header</header>
-            <div class="bfg__content"></div>
+            <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
+            <div class="bfg-card__action"><a href="#action-1">Action 1</a></div>
+            <header class="bfg-card__header">Very very very long Header</header>
+            <div class="bfg-card__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg__box--primary">
+          <div class="bfg__box bfg__box--6">
             <!-- content without header -->
-            <div class="bfg__content"></div>
+            <div class="bfg-card__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg__box--info">
-            <header class="bfg__header">Header</header>
-            <div class="bfg__content"></div>
+          <div class="bfg__box bfg__box--3 bfg-card--info">
+            <header class="bfg-card__header">Header</header>
+            <div class="bfg-card__content"></div>
           </div>
         </div>
 
-        <div class="bfg__box bfg__box--3 bfg__box--warning">
-          <header class="bfg__header">Header</header>
-          <div class="bfg__content"></div>
+        <div class="bfg__box bfg__box--3 bfg-card--warning">
+          <header class="bfg-card__header">Header</header>
+          <div class="bfg-card__content"></div>
         </div>
       </div>
 
