--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -27,34 +27,34 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--6 bfg__box--primary">
+        <div class="bfg__box bfg__box--6 bfg-card--primary">
           <!-- content with header -->
-          <header class="bfg__header">Header</header>
-          <div class="bfg__content">
+          <header class="bfg-card__header">Header</header>
+          <div class="bfg-card__content">
             <div class="demo-chart"></div>
           </div>
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg__box--primary">
+          <div class="bfg__box bfg__box--3 bfg-card--primary">
             <!-- content with header and actions -->
-            <div class="bfg__action"><a href="#action-2">Action 2</a></div>
-            <div class="bfg__action"><a href="#action-1">Action 1</a></div>
-            <header class="bfg__header">Very very very long Header</header>
-            <div class="bfg__content">
+            <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
+            <div class="bfg-card__action"><a href="#action-1">Action 1</a></div>
+            <header class="bfg-card__header">Very very very long Header</header>
+            <div class="bfg-card__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg__box--primary">
-            <div class="bfg__content">
+          <div class="bfg__box bfg__box--6 bfg-card--primary">
+            <div class="bfg-card__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg__box--primary">
-            <header class="bfg__header">Header</header>
-            <div class="bfg__content">
+          <div class="bfg__box bfg__box--3 bfg-card--primary">
+            <header class="bfg-card__header">Header</header>
+            <div class="bfg-card__content">
               <div class="demo-chart"></div>
             </div>
           </div>
