Fix standalone `.bfg-card`

--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -26,8 +26,8 @@
   <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--6 bfg-card--primary">
+      <div class="bfg bfg--col bfg--gap bfg-card bfg-card--primary">
+        <div class="bfg__box bfg__box--6">
           <!-- content with header -->
           <header class="bfg-card__header">Header</header>
           <div class="bfg-card__content">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg-card--primary">
+          <div class="bfg__box bfg__box--3">
             <!-- content with header and actions -->
             <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg-card__action"><a href="#action-1">Action 1</a></div>
@@ -46,13 +46,13 @@
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg-card--primary">
+          <div class="bfg__box bfg__box--6">
             <div class="bfg-card__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg-card--primary">
+          <div class="bfg__box bfg__box--3">
             <header class="bfg-card__header">Header</header>
             <div class="bfg-card__content">
               <div class="demo-chart"></div>
