--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,8 @@
    └─ lib
       ├─ _variables.scss
       ├─ _mixins.scss
-      ├─ _content.scss
       ├─ _core.scss
+      ├─ _card.scss
       ├─ bem-flex-grid.scss
       └─ bem-flex-grid.ie11.scss
 </code></pre>
