Add sass variable: $bfg-margin

--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -37,9 +37,14 @@
         <div class="bfg-card bfg-card--primary">
           <a href="#" class="bfg-card__action">Action 2</a>
           <a href="#" class="bfg-card__action">Action 1</a>
-
           <div class="bfg-card__header">Header</div>
+          <div class="bfg-card__content">Content</div>
+        </div>
 
+        <div class="bfg-card bfg-card--primary">
+          <a href="#" class="bfg-card__action">Action 2</a>
+          <a href="#" class="bfg-card__action">Action 1</a>
+          <div class="bfg-card__header">Header</div>
           <div class="bfg-card__content">Content</div>
         </div>
 
@@ -47,7 +52,6 @@
       </div>
     </div>
   </pre>
-
 
   <script>
     function switchTheme(event) {
