Allow nested `.bfg-card` (inside `.bfg__box`)

--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -28,10 +28,14 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap bfg-card bfg-card--primary">
-        <div class="bfg__box bfg__box--3 bfg-card--error">
-          <!-- content with header -->
-          <header class="bfg-card__header">Header</header>
-          <div class="bfg-card__content"></div>
+        <div class="bfg__box bfg__box--3">
+
+          <!-- nested card with content and header -->
+          <div class="bfg-card bfg-card--error">
+            <header class="bfg-card__header">Header</header>
+            <div class="bfg-card__content"></div>
+          </div>
+
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
