--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -34,6 +34,9 @@
     <div class="demo-layout__playground">
       <div style="padding: 1rem;">
 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
         <div class="bfg-card bfg-card--primary">
           <a href="#" class="bfg-card__action">Action 2</a>
           <a href="#" class="bfg-card__action">Action 1</a>
@@ -47,6 +50,9 @@
           <div class="bfg-card__header">Header</div>
           <div class="bfg-card__content">Content</div>
         </div>
+
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
       </div>
     </div>
