Add `gridGapSwitcher` action

--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -72,6 +72,6 @@
     });
   </script>
 
-  <script>Demo.viewCode(); Demo.enableActions('fullWidth');</script>
+  <script>Demo.viewCode(); Demo.enableActions(['fullWidth']);</script>
 </body>
 </html>
