--- a/src/demo/6.html
+++ b/src/demo/6.html
@@ -38,7 +38,7 @@
         </div>
         <div class="bfg__box bfg__box--9">
 
-          <!-- Nested grid starts here, inside the `.bfg__box` element -->
+          <!-- Nested grid -->
           <div class="bfg bfg--row">
             <div class="bfg__box bfg__box--12"></div>
           </div>
@@ -49,6 +49,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
 </body>
 </html>
