--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -64,7 +64,7 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction']);</script>
+  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction', 'gridGap']);</script>
 
   <script>
     const ctx = document.querySelectorAll('.demo-chart');
