--- a/src/demo/8.html
+++ b/src/demo/8.html
@@ -42,6 +42,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
 </body>
 </html>
